# RustPython

./: Cargo.toml  build.rs  test
.cargo/: config.toml
.cspell.dict/: cpython.txt
.github/workflows/: ci.yaml
Lib/: _opcode_metadata.py  _pycodecs.py  codecs.py
Lib/ctypes/: __init__.py
Lib/logging/: handlers.py
Lib/test/: test__opcode.py  test_builtin.py  test_contextlib.py  test_exceptions.py  test_generators.py  test_mmap.py  test_os.py  test_peepholer.py  test_shutil.py  test_subprocess.py  test_sys.py  test_tabnanny.py  test_threading.py  test_tokenize.py  test_traceback.py  test_weakref.py  test_with.py  test_zipimport.py
benches/: execution.rs  microbenchmarks.rs
bytecode/src/: lib.rs
common/: Cargo.toml  build.rs
common/src/: atomic.rs  borrow.rs  boxvec.rs  cformat.rs  crt_fd.rs  encodings.rs  fileutils.rs  float_ops.rs  format.rs  lib.rs  os.rs  rc.rs  refcount.rs  static_cell.rs  str.rs  windows.rs
compiler/codegen/: Cargo.toml
compiler/core/: Cargo.toml
compiler/literal/: Cargo.toml
compiler/literal/src/: complex.rs  escape.rs  float.rs  lib.rs
compiler/src/: compile.rs  ir.rs  lib.rs
crates/common/: Cargo.toml
crates/module_pyo3/: Cargo.toml
crates/stdlib/: Cargo.toml
crates/vm/: Cargo.toml
derive-impl/: Cargo.toml
derive/src/: lib.rs  (+1 more)
examples/: dis.rs  generator.rs  mini_repl.rs  package_embed.rs  parse_folder.rs
pylib/: build.rs
scripts/: compare_bytecode.py  dis_dump.py  generate_opcode_metadata.py
src/: interpreter.rs  lib.rs  main.rs  settings.rs
stdlib/: Cargo.toml  build.rs
vm/: Cargo.toml  build.rs
(+371 files in other folders)
