[package]
name = "rustpython-literal"
description = "Common literal handling utilities mostly useful for unparse and repr."
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
num-traits = { workspace = true }

[dependencies]
rustpython-wtf8 = { workspace = true }

hexf-parse = { git = "https://github.com/Masterchef365/hexf.git", branch = "no_std", default-features = false  }
#hexf-parse = { version = "0.2.1", default-features = false }

is-macro.workspace = true
lexical-parse-float = { version = "1.0.4", default-features = false, features = ["format"] }
num-traits = { workspace = true }
unic-ucd-category = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
